# opencl

./: .gitignore  CMakeLists.txt  compile_commands.json  conanfile.txt
exercises/: CMakeLists.txt
exercises/cl_info/: CMakeLists.txt  cl_info.cpp
exercises/clx/: CMakeLists.txt  clx.cpp
exercises/convolution/: CMakeLists.txt  Convolution.cpp
exercises/gaussian_filter/: .CMakeLists.txt.swo  CMakeLists.txt  gausian_filter.cl  main.cpp
exercises/histogram/: CMakeLists.txt  histogram.cpp  histogram_image.cl
exercises/opencl_cpp/: CMakeLists.txt  main.cpp
include/: clx.hpp
include/cl/: clx.hpp  kernels.hpp  sx.hpp
res/: HelloWorld.cl  simple.cl
src/: HelloWorld.cpp  helper.hpp  image_gausian.cpp  main.cpp  sub_buffer.cpp
